--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "iomanip": "cpp",
         "ratio": "cpp",
         "sstream": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "fstream": "cpp"
     }
 }
